nav br dark mode location fix

--- a/src/Components/DarkModeSlider/DarkModeSlider.scss
+++ b/src/Components/DarkModeSlider/DarkModeSlider.scss
@@ -50,7 +50,7 @@
     width: 200px;
     & span {
       position: relative;
-      left: 1vw;
+      left: 13vw;
       top: .6vh;
       font-size: 20px;
       color: var(--init-background);
